--- a/my-react-app/src/components/Input/Input.css
+++ b/my-react-app/src/components/Input/Input.css
@@ -5,7 +5,14 @@
 }
 
 .searchBar {
-  padding: 0.7em 1.2em;
+  padding: 0.8em 1.2em;
   margin-right: 10px;
   border: 1px solid #3d429f;
+  box-shadow: 0px 2px 3px rgba(71, 115, 184, 0.1);
+}
+
+.searchBar:focus-visible {
+  outline-color: transparent;
+  box-shadow: inset 0px 1px 2px rgba(63, 69, 133, 0.228);
+  border: 1px solid #646cff;
 }
