--- a/my-react-app/src/components/CardItem/CardItem.css
+++ b/my-react-app/src/components/CardItem/CardItem.css
@@ -1,4 +1,5 @@
 .item {
+  padding-bottom: 20px;
   max-width: 600px;
   box-shadow: 0px 2px 3px rgba(67, 114, 189, 0.1);
   border-radius: 5px;
@@ -21,8 +22,12 @@
 }
 
 .title {
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 900;
   margin: 10px 0;
-  color: #242a37;
+  padding-bottom: 10px;
+  color: #294784;
   border-bottom: 1px solid #898f9f;
 }
 
