--- a/my-react-app/src/components/ModalMovie/ModalMovie.css
+++ b/my-react-app/src/components/ModalMovie/ModalMovie.css
@@ -7,7 +7,7 @@
   background: rgba(24, 24, 24, 0.448);
   z-index: 500;
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.8s ease-in-out;
 }
 
 .backdrop.open {
@@ -16,18 +16,22 @@
 
 .modal-wrapper {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  transform: translate(0);
+  /* transform: translate(-50%, -50%); */
   z-index: 700;
   min-width: 270px;
   max-width: 600px;
   outline: 0;
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.8s ease-in-out;
 }
 
 .modal-wrapper.open {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   opacity: 1;
 }
 
@@ -42,7 +46,7 @@
   box-shadow: 10px 10px 20px rgba(100, 148, 227, 0.509);
   transform: translateY(-50px);
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.8s ease-in-out;
 }
 
 .modal.open {
